Update quote of  the_day.html
Just removing the background colour of navbar to learning commits and pull requests

--- a/quote of  the_day.html
+++ b/quote of  the_day.html
@@ -20,9 +20,10 @@
              */
             border-radius: 5px;
             height: 60px;
-            background-color: rgb(206 255 152);
+/*             background-color: rgb(206 255 152); */
             /* color: white; */
             /* display: inline-block; */
+            
         }
 
         li {
